# PyIR

./: LICENSE.txt  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
examples/: clustering_and_comparing.py  creating_ML_model.py  example_script.py  importing_annotations_and_affine_transform.py  loading_handling_and_plotting.py
src/: __init__.py  pyir_image.py  pyir_mask.py  pyir_pca.py  pyir_pccva.py  pyir_spectralcollection.py
src/PyIR/: pyir_image.py  pyir_mask.py  pyir_pca.py  pyir_spectralcollection.py
