[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyIR"
version = "0.1.0" # Make sure this is a valid version
authors = [
  { name="Dougal Ferguson", email="dougal.ferguson@manchester.ac.uk" },
]
description = "An infrared spectroscopy toolkit for the loading, handling and manipulation of IR spectral datasets in Python. Package includes wrappers for various ML packages."
readme = "README.rst"
license = { text = "GNU Lesser General Public License v3.0 or later" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
# Add your real dependencies here, for example:
# dependencies = [
#   "numpy",
#   "pandas",
# ]

[tool.setuptools.packages.find]
where = ["src"]