# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyir-toolkit"
version = "0.1.1"
authors = [
    { name = "Dougal Ferguson", email = "dougal.ferguson@manchester.ac.uk" },
]
description = "My PyIR toolkit for the handling of hyperspectral data"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose a license
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "h5py",
    "scikit-image",
    "Pillow",
    "opencv-python",
]