[metadata]
name = "PyIR"
version = "version number: 0.0.0"
license = "GNU Lesser General Public License v3.0 or later"
description = "An infrared spectroscopy toolkit for the loading, handling and manipulation of IR spectral datasets in Python. Package includes wrappers for various ML packages"
long_description = file: README.rst
author = "Dougal Ferguson"
author_email = "dougal.ferguson@manchester.ac.uk or dougalferg@gmail.com"
classifiers=
   Development Status :: 3 - Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pip install git+https://github.com/AlexHenderson/agilent-ir-formats/blob/main/agilentirformats/agilentirformats/agilentmosaic.py

[options.packages.find]
where=src